# switch-pctl-gui

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
include/: confirm_dialog.h  i18n.h  main.h  main_activity.h  main_frame.h  pctl_manager.h  pin_change_frame.h  status_view.h  time_limit_activity.h  time_limit_frame.h  toast.h  utils.h
source/: confirm_dialog.cpp  i18n.cpp  main.cpp  main_activity.cpp  main_frame.cpp  pctl_manager.cpp  pin_change_frame.cpp  status_view.cpp  time_limit_activity.cpp  time_limit_frame.cpp  toast.cpp  utils.cpp
